# ethereum-code-reviewer

./: .env.example  .env.webapp.example  .gitignore  Dockerfile  Dockerfile.github  Dockerfile.queue  Dockerfile.telegram  README.md  action.yml  agent.json  gunicorn.conf.py  package-lock.json  pyproject.toml  security-review.yml.example  setup.py
pr_security_review/: __init__.py  __main__.py  commit_monitor.py  config_loader.py  database.py  db_utils.py  document_store.py  email_notifications.py  example_report.html  findings_server.py  queue_listener.py  telegram_notifier.py  voyage_vector_store.py  web_app.py
pr_security_review/embeddings/: __init__.py
pr_security_review/llm_providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  llama.py  multi_judge.py  openai.py
pr_security_review/templates/: base.html  dashboard.html  finding_detail.html  findings_list.html  login.html  repositories_list.html  repository_detail.html  user_settings.html
pr_security_review/templates/admin/: agents.html  create_agent.html  create_repository.html  create_user.html  dashboard.html  edit_agent.html  edit_repository.html  edit_user.html  repository_documents.html  view_agent.html
pr_security_review/web/: __init__.py  auth.py  config.py  decorators.py  services.py  utils.py
pr_security_review/web/routes/: __init__.py  api.py  auth.py  findings.py  main.py  public_api.py  repositories.py
pr_security_review/web/routes/admin/: __init__.py  agents.py  dashboard.py  repositories.py  users.py
